
ProjectConfig
----------------------
* ProjectConfig.toString() should return Project.toString() to avoid breaking external jmx scripts. Reported by Mark Hatton.

SSCM/SSCMBootstrapper
----------------------
* Change Surround sourcecontrol and bootstrapper to use CommandLine() classes (CC-786). Patch by Alex Hooper.

SVN
----------------------
* Relax SVN externals parsing (CC-736). Reported by Patrick Muller.
* Will not cache authentication if username/password is specified (CC-723). Patch by Gunnar Wagenknecht.
* Added configDir attribute to allow use of separate Subversion configuration directory (CC-723). Patch by Gunnar Wagenknecht.

SVNBootstrapper
----------------------
* Will not cache authentication if username/password is specified (CC-722). Patch by Gunnar Wagenknecht.
* Added configDir attribute to allow use of separate Subversion configuration directory (CC-722). Patch by Gunnar Wagenknecht.

VSS
----------------------
* VSS modificationset fails for root project (CC-783). Reported by Gert Driesen.

Documentation
======================
* Fix typo in NantScript docs - NAnt.Core.XMLLogger to NAnt.Core.XmlLogger (CC-784). Reported by Gert Driesen.
* Attribute contributors in UCM defaults to true in stead of false (CC-816). Reported by Patrick Jenner.
* Document rebases and pvob attribs in UCM (CC-817). Reported by Patrick Jenner.

reporting jsp app
======================

Charts
----------------------
* Charts should now be cached rather than regenerated when no new build has run.
* Change how Counts about javadoc computed on metrics page (CC-695). Patch by Guanglei Li.

index.jsp/CruiseControlTagSupport.java
----------------------
* Fix some HTML injection and Cross-site scripting vulnerabilities (CC-805). Patch by Dan Ertman.

Modifications
----------------------
* Display revision # or label of modification if available (CC-496). Patch by Randy Coulman.


CruiseControl Release Notes - 2.7.2

general
======================